--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@prismicio/client": "^6.6.1",
+		"@prismicio/helpers": "^2.3.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.68",
 		"@sveltejs/kit": "next",
