--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^2.9.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prismicio/svelte": "^0.0.4"
+	}
 }
