--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
 		"svelte": "^4.2.7",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth/core": "^0.27.0",
+		"@auth/mongodb-adapter": "^2.4.0",
+		"@auth/sveltekit": "^0.13.0",
+		"mongodb": "^6.3.0",
+		"nodemailer": "^6.9.11"
+	}
 }
