:wrench:  drizzle + lucia setup, dropped prisma

--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"db:generate": "drizzle-kit generate:sqlite --config=drizzle-config.ts",
+		"db:push": "drizzle-kit push:sqlite --config=drizzle-config.ts",
+		"db:pull": "drizzle-kit introspect:sqlite --config=drizzle-config.ts",
+		"db:drop": "drizzle-kit drop --config=drizzle-config.ts",
+		"db:check": "drizzle-kit check:sqlite --config=drizzle-config.ts",
+		"db:studio": "drizzle-kit studio --config=drizzle-config.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"drizzle-kit": "^0.20.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -26,9 +33,13 @@
 		"@auth/core": "^0.27.0",
 		"@auth/mongodb-adapter": "^2.4.0",
 		"@auth/sveltekit": "^0.13.0",
+		"@lucia-auth/adapter-drizzle": "^1.0.2",
 		"@lucia-auth/adapter-prisma": "^4.0.0",
 		"@prisma/client": "^5.10.2",
 		"@tsndr/cloudflare-worker-jwt": "^2.5.1",
+		"better-sqlite3": "^9.4.3",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.29.4",
 		"lucia-auth": "^1.8.0",
 		"mongodb": "^6.3.0",
 		"nodemailer": "^6.9.11",
