--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
-		"vite": "^4.4.2"
+		"sveltekit-superforms": "^2.7.0",
+		"vite": "^4.4.2",
+		"vite-plugin-kit-routes": "^0.5.2",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -40,9 +43,11 @@
 		"better-sqlite3": "^9.4.3",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.29.4",
+		"drizzle-zod": "^0.5.1",
 		"lucia-auth": "^1.8.0",
 		"mongodb": "^6.3.0",
 		"nodemailer": "^6.9.11",
-		"oslo": "^1.1.3"
+		"oslo": "^1.1.3",
+		"svelte-meta-tags": "^3.1.1"
 	}
 }
