--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@prisma/client": "^5.10.2",
 		"@tsndr/cloudflare-worker-jwt": "^2.5.1",
 		"better-sqlite3": "^9.4.3",
+		"bits-ui": "^0.19.3",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.29.4",
 		"drizzle-zod": "^0.5.1",
@@ -48,6 +49,7 @@
 		"mongodb": "^6.3.0",
 		"nodemailer": "^6.9.11",
 		"oslo": "^1.1.3",
-		"svelte-meta-tags": "^3.1.1"
+		"svelte-meta-tags": "^3.1.1",
+		"svelte-preprocess": "^5.1.3"
 	}
 }
