--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
+		"sveltekit-flash-message": "^2.4.2",
 		"sveltekit-superforms": "^2.7.0",
 		"vite": "^4.4.2",
 		"vite-plugin-kit-routes": "^0.5.2",
