--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"db:generate": "drizzle-kit generate:sqlite --config=drizzle-config.ts",
-		"db:push": "drizzle-kit push:sqlite --config=drizzle-config.ts",
-		"db:pull": "drizzle-kit introspect:sqlite --config=drizzle-config.ts",
+		"db:generate": "drizzle-kit generate:mysql --config=drizzle-config.ts",
+		"db:push": "drizzle-kit push:mysql --config=drizzle-config.ts",
+		"db:pull": "drizzle-kit introspect:mysql --config=drizzle-config.ts",
 		"db:drop": "drizzle-kit drop --config=drizzle-config.ts",
-		"db:check": "drizzle-kit check:sqlite --config=drizzle-config.ts",
+		"db:check": "drizzle-kit check:mysql --config=drizzle-config.ts",
 		"db:studio": "drizzle-kit studio --config=drizzle-config.ts"
 	},
 	"devDependencies": {
@@ -38,9 +38,11 @@
 		"@auth/mongodb-adapter": "^2.4.0",
 		"@auth/sveltekit": "^0.13.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.2",
+		"@lucia-auth/adapter-postgresql": "^3.1.0",
 		"@lucia-auth/adapter-prisma": "^4.0.0",
 		"@prisma/client": "^5.10.2",
 		"@tsndr/cloudflare-worker-jwt": "^2.5.1",
+		"@vercel/postgres": "^0.7.2",
 		"better-sqlite3": "^9.4.3",
 		"bits-ui": "^0.19.3",
 		"dotenv": "^16.4.5",
@@ -50,6 +52,7 @@
 		"mongodb": "^6.3.0",
 		"nodemailer": "^6.9.11",
 		"oslo": "^1.1.3",
+		"pg": "^8.11.3",
 		"svelte-meta-tags": "^3.1.1",
 		"svelte-preprocess": "^5.1.3"
 	}
